<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mosajon.u930control.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/View_text"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView" />


    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:id="@+id/tableLayout">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <Button
                style="?android:attr/buttonStyleSmall"
                android:text="@string/txtKeyOpen"
                android:id="@+id/button"
                android:onClick="Btn_Click" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:text="@string/txtKeyClose"
                android:id="@+id/button2"
                android:onClick="Btn2_Click"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/View_text2"
                android:id="@+id/textView2"
                android:layout_column="0"
                android:textColor="@color/colorPrimaryDark" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:text="@string/txtGreenOpen"
                android:id="@+id/button3"
                android:layout_column="0"
                android:onClick="Btn3_Click"
                android:textColor="@android:color/holo_green_dark" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:text="@string/txtGreenClose"
                android:id="@+id/button4"
                android:layout_column="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="Btn4_Click" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:text="@string/txtRedOpen"
                android:id="@+id/button5"
                android:layout_column="0"
                android:onClick="Btn5_Click"
                android:textColor="@android:color/holo_red_light" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:text="@string/txtRedClose"
                android:id="@+id/button6"
                android:layout_column="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="Btn6_Click" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="欢迎光临！"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />
</RelativeLayout>
